add_library(
        OpenGLVixen
        STATIC
        OpenGLRenderingDevice.cpp
        OpenGLRenderingDevice.h
        OpenGLRenderingContext.cpp
        OpenGLRenderingContext.h
)
target_link_libraries(
        OpenGLVixen
        PUBLIC
        Vixen
)
target_include_directories(
        OpenGLVixen
        PUBLIC
        ${CMAKE_SOURCE_DIR}/src/engine
)
